<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Package -->
    <string name="app_description">Post messages to Twitter from Medoly.</string>
    <string name="label_event_tweet">Tweet</string>
    <string name="label_execute_tweet">Send to external apps</string>
    <string name="label_execute_site">Twitter</string>
    <string name="app_manual_url">https://github.com/wa2c/medoly-twitter-plugin/wiki/Home</string>
    <string name="app_version_url">https://github.com/wa2c/medoly-twitter-plugin/wiki/History</string>
    <string name="app_privacy_policy_url">https://github.com/wa2c/medoly-twitter-plugin/wiki/Privacy-Policy</string>

    <!-- Screen -->
    <string name="title_screen_edit">Message Edit</string>
    <string name="title_screen_settings">Setting</string>
    <string name="label_insert">Insert</string>
    <string name="label_default">Default</string>
    <string name="label_priority">Priority</string>
    <string name="label_confirm">Confirm</string>

    <!-- Twitter -->
    <string name="message_no_media">The media is not selected.</string>
    <string name="message_post_success">Tweet completed.</string>
    <string name="message_post_failure">Tweet failed.</string>
    <string name="message_page_failure">Failed to open the page.</string>
    <string name="message_auth_success">OAuth completed.</string>
    <string name="message_auth_failure">OAuth failed.</string>

    <!-- Main Activity -->
    <string name="label_button_account_auth">Twitter Auth</string>
    <string name="label_button_edit">Edit Message</string>
    <string name="label_button_settings">Settings</string>
    <string name="label_button_launch_medoly">Launch Medoly</string>
    <string name="message_storage_permission_denied">Tweets can not include images because of file permission denied.</string>
    <string name="message_no_medoly">Please install Medoly.</string>
    <string name="message_account_auth">Account authentication completed.</string>
    <string name="message_account_not_auth">Account is not been authenticated.</string>
    <string name="message_account_clear">Account auth cleared.</string>

    <!--  Edit Activity -->
    <string name="label_edit_title">Edit Message</string>
    <string name="label_edit_insert_album_art">Insert album art.</string>
    <string name="label_dialog_insert_property_title">Insert Property</string>
    <string name="label_dialog_property_priority_title">Sorting Item Priority</string>
    <string name="label_dialog_property_priority_title1">View  Item</string>
    <string name="label_dialog_property_priority_title2">Shorten</string>
    <string name="message_initialize_priority">Priority initialized.</string>
    <string name="message_confirm_initialize_format">Initialize current message.</string>

    <!-- Settings Activity -->
    <string name="settings_summary_current_value">[Current Value: %1$s]</string>
    <string name="message_unsupported_device">This device is unsupported.</string>



    <!-- Preferences -->
    <string name="title_preference_category_settings">Settings</string>
    <string name="title_preference_category_about">About</string>

    <!-- Preferences - Settings -->
    <string name="pref_title_event_tweet_operation">Tweet Event</string>
    <string name="pref_summary_event_tweet_operation">Select the event to tweet.</string>
    <string name="pref_title_previous_media_enabled">Run Previous Media</string>
    <string name="pref_summary_previous_media_enabled">Enable to run the event for the same media that has run the event already last time.</string>
    <string name="pref_title_trim_before_empty_enabled">Trim Before Whitespace</string>
    <string name="pref_summary_trim_before_empty_enabled">Trim the whitespace in front of the empty item.</string>
    <string name="pref_title_omit_newline">Omit At Newline</string>
    <string name="pref_summary_omit_newline">When omit the text which contains newlines, omit at a newline position.</string>
    <string name="pref_title_send_album_art">Send Album Art</string>
    <string name="pref_summary_send_album_art">Include album art image on tweet.</string>
    <string name="pref_title_post_success_message_show">Show Success Message</string>
    <string name="pref_summary_post_success_message_show">Show the message when tweet succeeded.</string>
    <string name="pref_title_post_failure_message_show">Show Failure Message</string>
    <string name="pref_summary_post_failure_message_show">Show the message when tweet failed. </string>
    <string name="pref_title_device_auto_start">Auto Start Manager</string>
    <string name="pref_summary_device_auto_start">Launch the device auto start manager. Some devices need change settings to launch plugin.</string>

    <!-- Preferences - About -->
    <string name="pref_title_info_app_version">App Version</string>
    <string name="pref_summary_info_app_version" />
    <string name="pref_title_info_author">Author</string>
    <string name="pref_summary_info_author">@string/app_author</string>
    <string name="pref_title_info_manual">Manual</string>
    <string name="pref_summary_info_manual">Show manual</string>
    <string name="pref_title_info_app_license">License</string>
    <string name="pref_summary_info_app_license">@string/app_license</string>
    <string name="pref_title_info_library_license">Open Source License</string>
    <string name="pref_summary_info_library_license">Show open source license.</string>
    <string name="pref_title_info_privacy_policy">Privacy Policy</string>
    <string name="pref_summary_info_privacy_policy">Show privacy policy.</string>
    <string name="pref_title_info_info_app">App Info</string>
    <string name="pref_summary_info_info_app">Open OS app info.</string>
    <string name="pref_title_info_store">Google Play</string>
    <string name="pref_summary_info_store">Open Google Play Store.</string>

    <!-- System -->
    <string name="error_app">The operation failed due to an error.</string>

    <!-- List -->
    <string name="label_plugin_operation_disable">Disabled</string>

</resources>
