<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.wa2c.android.medoly.plugin.action.tweet.activity.EditActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_edit_title" />

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textNoSuggestions|textMultiLine"
            android:lines="6" />

        <Button
            android:id="@+id/insertButton"
            android:layout_width="@dimen/edit_button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insertAlbumArtCheckBox"
            android:layout_alignParentLeft="true"
            android:text="@string/label_insert" />

        <Button
            android:id="@+id/initializeButton"
            android:layout_width="@dimen/edit_button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insertAlbumArtCheckBox"
            android:layout_alignParentRight="true"
            android:text="@string/label_default" />

        <CheckBox
            android:id="@+id/insertAlbumArtCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentEditText"
            android:layout_alignParentLeft="true"
            android:checked="false"
            android:text="@string/label_edit_insert_album_art" />

        <Button
            android:id="@+id/priorityButton"
            android:layout_width="@dimen/edit_button_width"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/insertButton"
            android:layout_centerHorizontal="true"
            android:text="@string/label_priority" />

    </RelativeLayout>

</layout>
